--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,4 +33,6 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        python -m coverage run --source="src/main/python/." src/test/test.py
+        coverage report --include="src/main/extractor/*.py"
+        coverage xml -o src/test/cobertura.xml
