--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Test with pytest
       run: |
         python -m coverage run --source="src/main/python/." src/test/test.py
-        coverage report --include="src/main/extractor/*.py"
+        coverage report --include="src/main/python/*.py"
         coverage xml -o src/test/cobertura.xml
